--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "David Panzoli",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "mysql": "^2.18.1"
