--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "author": "David Panzoli",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "0.0.1-security",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "nodemailer": "^6.5.0"
   }
 }
